# Neural-Engine

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt
chapters/: chapter01.md  chapter01_route.md  chapter01_v1.md  chapter_route.md
docs/: GAP-ANALYSIS.md  ROADMAP.md
docs/adr/: 0002-v0-engine-implementation.md  0004-appendix-deviations.md  0004-v1-chinese-dsl-refactor.md  0004-v1-refactor-design.md
docs/agents/: domain.md  triage-labels.md
docs/audit/: phase1-baseline-deviations.md  phase1-baseline.md  phase3-method-audit.md  v0-invariant-audit.md  v1-independent-audit-hanice.md  v2-independent-audit-pm.md  v2-p0-summary.md
docs/issues/: phase1-audit-and-fixes.md  phase3-method-audit.md  phase3-v2p0.md
docs/pdr/: phase1-audit-and-fixes.md  phase3-method-audit.md  phase3-v2p0.md
docs/prds/: 0001-v0-engine-implementation.md  0002-v1-expression-subsystem.md
src/core/: CONTEXT.md
src/editor/: CONTEXT.md  chapter_manager_model.py  debugger_model.py  dsl_sync.py  editor_model.py  node_graph_model.py  node_graph_view.py  preview_controller.py  project_exporter.py  resource_manager.py
src/runtime/: CONTEXT.md  __init__.py  audio.py  chapter_manager.py  load_chapter.py  save.py  settings.py  video.py
tests/: conftest.py  test_echo.md  test_invariants.py  test_mvp_table.py  test_skeleton_smoke.py
tests/core/: test_arrow_syntax.py  test_ast_shapes.py  test_block_body.py  test_block_meta.py  test_block_skeleton.py  test_decorator_hooks.py  test_engine_bus.py  (+18 more)
tmp/: ast-shape-prototype.md  if-parse-prototype.md  triage-23-comment.md  triage-24-comment.md  triage-25-comment.md  triage-26-comment.md  triage-27-comment.md  triage-28-comment.md  triage-29-comment.md  triage-30-comment.md  triage-31-comment.md  triage-32-comment.md  triage-33-comment.md  triage-34-comment.md  triage-36-comment.md  triage-37-comment.md  triage-38-comment.md  triage-39-comment.md  triage-40-comment.md  triage-41-comment.md  triage-42-comment.md  v0-issue-1-done-comment.md  v0-issue-2-done-comment.md
工作Wiki/: 60-v1-roadmap.md  README.md
(+133 files in other folders)
