[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-engine"
version = "0.0.0"
description = "中文文字游戏引擎 v0 baseline"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
gui = [
    "PyQt6>=6.6",
]

[tool.setuptools.packages.find]
where = ["src"]
