[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-engine"
version = "0.0.0"
description = "中文文字游戏引擎 v0 baseline"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    # D5 修法 (ADR-0004 B6): 锁定到具体版本, 防止 simpleeval 升级破坏沙箱契约
    # simpleeval 1.0.x 版本谱 (调研于 2026-06-24, 来源: PyPI + GitHub releases):
    #   1.0.0 (2024-10-05): 稳定版 - 沙箱逃逸修复 + dict comprehension + 自定义异常
    #   1.0.1/1.0.2 (2024-10): packaging 调整
    #   1.0.3 (2024-11-02): Python 3.14 支持
    #   1.0.5 (2026-03-13): 安全修复 CVE-2026-32640 (模块不再直接可访问, BREAKING)
    #   1.0.6 (2026-03-13): 1.0.5 引发的 unhashable kwargs bugfix
    #   1.0.7 (2026-03-16): 1.0.5/1.0.6 性能回退修复 — 选为 pin 版本
    "simpleeval==1.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
gui = [
    "PyQt6>=6.6",
]

[tool.setuptools.packages.find]
where = ["src"]
