[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-engine"
version = "0.0.0"
description = "中文文字游戏引擎 v0 baseline"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "simpleeval>=1.0",  # v1-issue-1 表达式求值器 (ADR-0003 §1 决策 1)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
gui = [
    "PyQt6>=6.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", "__pycache__"]
